<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/new_todo_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/todo_title_text_size"
        android:layout_marginTop="@dimen/new_todo_title_margin_top"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:text="@string/new_todo_title_text"/>

    <EditText
        android:id="@+id/title_edit_text"
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@+id/new_todo_title_text"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:layout_marginStart="@dimen/edit_text_side_margin"
        android:layout_marginEnd="@dimen/edit_text_side_margin"
        android:padding="@dimen/edit_text_padding_value"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@drawable/black_border"/>

    <EditText
        android:id="@+id/desc_edit_text"
        android:hint="@string/desc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/desc_edit_text_height"
        android:layout_below="@+id/title_edit_text"
        android:gravity="top"
        android:padding="@dimen/edit_text_padding_value"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:layout_marginStart="@dimen/edit_text_side_margin"
        android:layout_marginEnd="@dimen/edit_text_side_margin"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@drawable/black_border"/>

    <ImageView
        android:id="@+id/image_view"
        android:background="@drawable/black_border"
        android:layout_width="@dimen/image_view_dimens"
        android:layout_height="@dimen/image_view_dimens"
        android:layout_margin="@dimen/image_view_margin"
        android:layout_below="@+id/desc_edit_text"/>

    <TextView
        android:id="@+id/image_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_view"
        android:layout_alignTop="@+id/image_view"
        android:layout_alignRight="@+id/image_view"
        android:layout_alignBottom="@+id/image_view"
        android:layout_margin="@dimen/border_stroke_width"
        android:gravity="center"
        android:text="@string/image_text"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/cancel_button"
        android:text="@string/cancel"
        android:background="@drawable/black_border"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/button_side_margin"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_width="@dimen/cancel_button_width"
        android:layout_height="@dimen/cancel_button_height"/>

    <Button
        android:id="@+id/done_button"
        android:text="@string/done"
        android:background="@drawable/black_border"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/button_side_margin"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_width="@dimen/cancel_button_width"
        android:layout_height="@dimen/cancel_button_height"/>

</RelativeLayout>