<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/todo_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/todo_title_text_size"
        android:layout_marginTop="@dimen/todo_title_margin_top"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:text="@string/todo_title"/>

    <Button
        android:id="@+id/add_button"
        android:text="@string/add"
        android:background="@drawable/black_border"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/add_button_side_margin"
        android:layout_marginTop="@dimen/add_button_margin_top"
        android:layout_alignTop="@+id/todo_title_text"
        android:layout_width="@dimen/add_button_width"
        android:layout_height="@dimen/add_button_height"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:gravity="top"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@+id/todo_title_text"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:layout_marginStart="@dimen/edit_text_side_margin"
        android:layout_marginEnd="@dimen/edit_text_side_margin"
        android:textColorHint="@color/colorPrimaryDark"
        android:padding="@dimen/edit_text_padding_value"
        android:background="@drawable/black_border"
        app:queryHint="@string/search"
        app:defaultQueryHint="@string/search"
        app:iconifiedByDefault="false"
        app:searchIcon="@null"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_below="@+id/search_view"
        android:layout_marginTop="@dimen/recycler_view_margin_top"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>